# hybrid_gm_ai

./: .env.example  .gitignore  6.0記載  CLAUDE.md  README.md  change.patch  chatgpt_shared_manifest.yaml  config.yml  dev.cmd  patch2.patch  patch3.patch  pyproject.toml  pytest.ini  requirement_lock.txt  requirements.txt  requirements_lock.txt  run.bat
.claude/: settings.local.json
blueprints/: emotion_eval.yml  story.yml
docs/: LOGBOOK.md  STATE.md  action_proposal_dsl_v0.1.md
dotenv/: __init__.py
general_documents/: architecture.md  git_usage.md  git_usage_QnA_01.txt  gm_ai_definition.md  gm_ai_setting-direction.md  new_diorection.md  new_structure.md  structure.md  structure_now.md
openai/: __init__.py
pydantic/: __init__.py
scripts/: ab_pipeline.py  apply_priority_suggestions.py  gc_jobs.py  generate_rules_APItest.py  hearts_sky_pixel.py  hydrate_shared_files.py  list_referenced_jobs.py  loadenv_test.py  make_share_bundle.py  old_playerstatus.py  old_snapshot_job.py  parse_ai_response_to_json.py  policy_linter.py  preference_cli.py  prefs_aggregate.py  render_with_diffusers.py  repair_prefs_paths.py  run_eval_suite.py  run_eval_suite.py.rej  sg_to_prompt.py  snapshot_job.py  spec_stubgen.py
src/: CharacterStatus.py  __init__.py  action_definitions.py  action_effects.py  action_functions.py  action_model.py  action_registry.py  actions.py  actor_view_state.py  affordance_bridge.py  character_status.py  choice_definitions.py  choice_model.py  choice_ui.py  control_manager.py  conversation_manager.py  emotion_manager.py  emotion_math.py  emotion_state.py  (+19 more)
(+208 files in other folders)
