[project]
name = "hybrid_gm_ai"     # パッケージ名
version = "0.1.0"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
  "pytest",
  "python-dotenv",
  "openai>=1.0",
  "colorama" 
]

[tool.setuptools]

[tool.setuptools.packages.find]
where = ["src"]                 # ★ 追加: src を探索対象に